# projeto-sistema-restaurante

./: .gitignore  README.md  pyproject.toml  ruff.toml
dados/: cardápio.xlsx  pedidos.xlsx  pedidos_itens.xlsx
src/: Controle.ods
src/projeto_festa_italiana/: __init__.py  base.py
src/projeto_festa_italiana/pagina/: cobranca.py  entrega.py  pedido.py  preparacao.py
