[project]
name = "projeto-festa-italiana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.38.0",
    "streamlit-antd-components>=0.3.2",
    "numpy>=2.1.1",
    "polars>=1.7.1",
    "fastexcel>=0.11.6",
    "xlsxwriter>=3.2.0",
]
scripts = { run = "streamlit run src/projeto_festa_italiana/__init__.py" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
